[gd_scene load_steps=21 format=3 uid="uid://rmlk6qyqckh7"]

[ext_resource type="Script" path="res://scripts/fire.gd" id="1_5agkb"]
[ext_resource type="Texture2D" uid="uid://dqxpqrwqoytmg" path="res://Hit (16x32).png" id="2_w422b"]
[ext_resource type="Texture2D" uid="uid://voljh2jaq1bq" path="res://Off.png" id="3_tbvvs"]
[ext_resource type="Texture2D" uid="uid://8585w42nlph4" path="res://On (16x32).png" id="4_8xw4o"]
[ext_resource type="Script" path="res://scripts/FiniteMachineState.gd" id="5_5tjc2"]
[ext_resource type="Script" path="res://scripts/fire_off.gd" id="6_smemk"]
[ext_resource type="Script" path="res://scripts/fire_hit.gd" id="7_ulc83"]
[ext_resource type="Script" path="res://scripts/fire_on.gd" id="8_plb2r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hv42i"]
atlas = ExtResource("2_w422b")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx3up"]
atlas = ExtResource("2_w422b")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkhkm"]
atlas = ExtResource("2_w422b")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4t8r"]
atlas = ExtResource("2_w422b")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdatg"]
atlas = ExtResource("3_tbvvs")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek0yp"]
atlas = ExtResource("4_8xw4o")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3k3i"]
atlas = ExtResource("4_8xw4o")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u5me"]
atlas = ExtResource("4_8xw4o")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ibhix"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv42i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx3up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkhkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4t8r")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdatg")
}],
"loop": false,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek0yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3k3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u5me")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ens2"]
size = Vector2(16, 16.125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4tgfu"]
size = Vector2(16, 2.375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vs1m7"]
size = Vector2(9.5, 11.5)

[node name="fire" type="StaticBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
script = ExtResource("1_5agkb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(183.5, 289)
sprite_frames = SubResource("SpriteFrames_ibhix")
animation = &"on"
metadata/_edit_group_ = true

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource("5_5tjc2")

[node name="Off" type="Node" parent="FiniteStateMachine"]
script = ExtResource("6_smemk")

[node name="Hit" type="Node" parent="FiniteStateMachine"]
script = ExtResource("7_ulc83")

[node name="On" type="Node" parent="FiniteStateMachine"]
script = ExtResource("8_plb2r")

[node name="Timer" type="Timer" parent="FiniteStateMachine/On"]
process_callback = 0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2(184, 297.063)
shape = SubResource("RectangleShape2D_8ens2")
metadata/_edit_group_ = true

[node name="StepArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StepArea"]
position = Vector2(183.5, 288)
shape = SubResource("RectangleShape2D_4tgfu")
metadata/_edit_group_ = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(183.25, 281.25)
shape = SubResource("RectangleShape2D_vs1m7")
disabled = true
metadata/_edit_group_ = true

[connection signal="timeout" from="FiniteStateMachine/On/Timer" to="FiniteStateMachine/On" method="_on_timer_timeout"]
[connection signal="body_entered" from="StepArea" to="." method="_on_step_area_body_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
